Sign in/Sign up

--- a/src/App/style/common.scss
+++ b/src/App/style/common.scss
@@ -1,3 +1,7 @@
+html * {
+  font-family: NotoSans, Helvetica Neue, Helvetica !important;
+  font-weight: 500;
+}
 .container {
   padding-left: 30px;
   padding-right: 30px;
