--- a/src/App/Nav/styles/LoginDialog.module.scss
+++ b/src/App/Nav/styles/LoginDialog.module.scss
@@ -3,8 +3,8 @@
 }
 
 .title {
-  line-height: 54px;
-  font-size: 40px;
+  line-height: 1;
+  font-size: 36px;
   font-weight: 700;
-  color: #000; 
+  color: #000;
 }
