--- a/src/components/Fields/InputField.module.scss
+++ b/src/components/Fields/InputField.module.scss
@@ -24,11 +24,17 @@ body {
     }
   }
   .input {
-    padding: 26px 24px;
+    padding: 21px 24px;
     line-height: 18px;
     height: 18px;
     font-size: 18px;
     font-weight: 700;
     color: #000;
+
+    &::placeholder {
+      font-size: 16px;
+      font-weight: 400;
+      color: #C4C4C4;
+    }
   }
 }
