--- a/src/App/style/common.scss
+++ b/src/App/style/common.scss
@@ -2,3 +2,10 @@
   padding-left: 30px;
   padding-right: 30px;
 }
+
+.absolute {
+  position: absolute;
+}
+input:-internal-autofill-selected {
+  box-shadow: inset 0 0 0 1000px #fff !important;
+}
