add NotoSans font

--- a/src/App/style/font.scss
+++ b/src/App/style/font.scss
@@ -1,4 +1,8 @@
 html {
+  * {
+    font-family: NotoSans, Helvetica Neue, Helvetica !important;
+    font-weight: 500;
+  }
   .gray-main {
     color: #333;
   }
