Improve logic css detail, Fix: SWD-30,SWD-32

--- a/src/components/Dialog/index.module.scss
+++ b/src/components/Dialog/index.module.scss
@@ -11,12 +11,13 @@ body {
 
   .closeIconWrapper {
     position: absolute;
-    top: 12px;
-    right: 12px;
+    top: 6px;
+    right: 6px;
+    padding: 4px;
   }
 
   .closeIcon {
-    width: 38px;
-    height: 38px;
+    width: 30px;
+    height: 30px;
   }
 }
